0024387: Tests - use system-independent fonts in test cases

Add a new parameter "-font FontName" to the command "vdimension".
Tuning of test-cases